# shared-memory

shared_memory_project/: CMakeLists.txt
shared_memory_project/include/: shared_memory.h
shared_memory_project/src/: backup.c  deleterByKey.c  editor.c  initializer.c  initializerQueue.c  locker.c  logger.c  monitor.c  overview.c  queue.c  queue_reader.c  reader.c  reset.c  restorer.c  searcher.c  viewer.c  writer.c
